--- a/contactme.css
+++ b/contactme.css
@@ -1,19 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 .container{
+  font-family: 'Lato', sans-serif;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: 
   "nav nav"
-  "header imageOne"
+  "imageOne imageOne"
   "slideTwo slideTwo"
   "footer footer";
   grid-gap: 15px;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
 }
 
 .nav{
   grid-area: nav;
-  background-color: rgb(255, 174, 107);
+  background-color: rgb(247, 110, 86);
   padding: 20px;
 }
 
@@ -22,27 +25,27 @@
   padding: 30px;
 }
 
-.header{
-grid-area: header;
-background-color: rgba(129, 173, 240, 0.637);
-padding: 24px;
+.nav a {
+  color: white;
 }
 
 .imageOne{
   grid-area: imageOne;
-  background-color: rgb(230, 74, 230);
+  background-color: rgb(233, 62, 32);
   padding: 15px;
 }
 
 .slideTwo{
   grid-area: slideTwo;
-  background-color: rgb(255, 198, 208);
+  background-color: rgb(241, 65, 53);
   padding: 20px;
+  color: white;
 }
 
 .footer{
   grid-area: footer;
-  background-color: rgb(50, 248, 50);
+  background-color: rgb(211, 51, 30);
   padding: 15px;
+  color: white;
 }
 
